[package]
name = "consensus_new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
byteorder = "1.4.2"
hex = "0.4.3"
crypto = { path = "../crypto" }
bytes = "1.0.1"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.3.0", features = ["rt", "time", "macros", "sync"] }
async-recursion = "1.0.0"